--- a/src/assets/ConversationsItem.module.css
+++ b/src/assets/ConversationsItem.module.css
@@ -1,12 +1,9 @@
-.conversation-item {
-  &:hover, &.conversation-item--active {
-    background-color: #008CFF;
-    cursor: pointer;
-    margin-right: -2px;
-    margin-left: -1px;
+.conversation-item:hover {
+  cursor: pointer;
+  margin-right: -2px;
+  margin-left: -1px;
+}
 
-    .conversation-item-text {
-      color: white;
-    }
-  }
+.conversation-item-text {
+  color: white !important;
 }
