--- a/src/assets/MessageBubble.module.css
+++ b/src/assets/MessageBubble.module.css
@@ -9,9 +9,9 @@
   width: 92%;
 }
 .received_withd_msg > div {
-  background: #ebebeb none repeat scroll 0 0;
+  background: #001528 none repeat scroll 0 0;
   border-radius: 3px;
-  color: #646464;
+  color: #fff;
   font-size: 14px;
   margin: 0;
   padding: 5px 10px 5px 12px;
@@ -28,7 +28,7 @@
 }
 
 .sent_msg > div {
-  background: #05728f none repeat scroll 0 0;
+  background: #f22e45 none repeat scroll 0 0;
   border-radius: 3px;
   font-size: 14px;
   margin: 0;
@@ -41,7 +41,6 @@
   margin: 26px 0 26px;
 }
 .sent_msg {
-  display: inline-block;
   float: right;
   width: 70%;
 }
