--- a/src/assets/MessageBubble.module.css
+++ b/src/assets/MessageBubble.module.css
@@ -1,50 +1,4 @@
-.incoming_msg_img {
-  display: inline-block;
-  width: 6%;
-}
-.received_msg {
-  display: inline-block;
-  padding: 0 0 0 10px;
-  vertical-align: top;
-  width: 92%;
-}
-.received_withd_msg > div {
-  background: #001528 none repeat scroll 0 0;
-  border-radius: 3px;
-  color: #fff;
-  font-size: 14px;
-  margin: 0;
-  padding: 5px 10px 5px 12px;
-  width: 100%;
-}
-.time_date {
-  color: #747474;
-  display: block;
-  font-size: 12px;
-  margin: 8px 0 0;
-}
-.received_withd_msg {
-  width: 40%;
-}
-
-.sent_msg > div {
-  background: #f22e45 none repeat scroll 0 0;
-  border-radius: 3px;
-  font-size: 14px;
-  margin: 0;
-  color: #fff;
-  padding: 5px 10px 5px 12px;
-  width: 100%;
-}
-.outgoing_msg {
-  overflow: hidden;
-  margin: 26px 0 26px;
-}
-.sent_msg {
-  float: right;
-  width: 40%;
-}
-.input_msg_write input {
+/* .input_msg_write input {
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
   border: medium none;
   color: #4c4c4c;
@@ -52,13 +6,11 @@
   min-height: 48px;
   width: 100%;
 }
-
 .image {
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
-
 .picture_preview {
   width: 250px;
   height: 250px;
@@ -66,7 +18,6 @@
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .picture_preview {
   transition-duration: 100ms;
   transition-timing-function: ease-in-out;
@@ -118,4 +69,4 @@
   align-items: center;
   flex-shrink: 0;
   flex-basis: 220px;
-}
+}  */
